Massive reworking of the configuration DSL
 - Introduce global, application and binder top sections
 - The application element contains all configurations (including maven related) for the generated applications except binder related configurations.
 - The binders element contains map of named binders. Each binder provides additional, binder specific configurations (including maven configs) on top of the application one.
 - The global element consist in turn of (application and binders). It can be used inside pluginsManagement to define common configuration applicable for all applications. The application level application and binder configurations are merged to the global one.

--- a/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app-pom.xml
+++ b/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app-pom.xml
@@ -33,6 +33,10 @@
 		<skipTests>true</skipTests>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- (begin) maven properties -->
+		{{#app.maven.properties}}
+		{{this}}
+		{{/app.maven.properties}}
+
 		{{#app-binder.maven.properties}}
 		{{this}}
 		{{/app-binder.maven.properties}}
@@ -42,13 +46,13 @@
 	<dependencyManagement>
 		<dependencies>
 			<!-- (begin) managed dependencies -->
-			{{#app.maven.managedDependencies}}
+			{{#app.maven.dependencyManagement}}
 			{{this}}
-			{{/app.maven.managedDependencies}}
+			{{/app.maven.dependencyManagement}}
 
-			{{#app-binder.maven.managedDependencies}}
+			{{#app-binder.maven.dependencyManagement}}
 			{{this}}
-			{{/app-binder.maven.managedDependencies}}
+			{{/app-binder.maven.dependencyManagement}}
 			<!-- (end) managed dependencies -->
 		</dependencies>
 	</dependencyManagement>
@@ -130,7 +134,7 @@
 			<plugin>
 				<groupId>com.google.cloud.tools</groupId>
 				<artifactId>jib-maven-plugin</artifactId>
-				<version>2.0.0</version>
+				<version>2.5.2</version>
 				<configuration>
 					<from>
 						<image>springcloud/openjdk</image>
