Make base image a property
 - Fix and add test
 - Fix checkstyle
 - Update jib plugin version

--- a/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app-pom.xml
+++ b/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app-pom.xml
@@ -147,7 +147,7 @@
 				<version>2.5.2</version>
 				<configuration>
 					<from>
-						<image>springcloud/openjdk</image>
+						<image>{{app.containerImage.baseImage}}</image>
 					</from>
 					<to>
 						<image>{{app.containerImage.orgName}}/${project.artifactId}</image>
