Add image labels for application name and version
 - Add an application.name container image label with value of the ${project.artifactId}
 - Add an application.version container image label with value of the ${project.version}

--- a/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app-pom.xml
+++ b/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app-pom.xml
@@ -163,6 +163,8 @@
 							<org.springframework.cloud.dataflow.spring-configuration-metadata.json>
 								${org.springframework.cloud.dataflow.spring.configuration.metadata.json}
 							</org.springframework.cloud.dataflow.spring-configuration-metadata.json>
+							<application.name>${project.artifactId}</application.name>
+							<application.version>${project.version}</application.version>
 						</labels>
 						{{/app.containerImage.enableMetadata}}
 					</container>
