Add app groupId mojo tag to configure the app's alternate group
  If app#groupId is provided, the value is used as the application maven groupId as well
  as the base package for the generated packageName in the generator.

  The app#groupId defaults "org.springframework.cloud.stream.app".

  Resolves #4

--- a/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app-pom.xml
+++ b/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app-pom.xml
@@ -9,7 +9,7 @@
 		<version>{{app.springBootVersion}}</version>
 		<relativePath></relativePath>
 	</parent>
-	<groupId>org.springframework.cloud.stream.app</groupId>
+	<groupId>{{app.groupId}}</groupId>
 	<artifactId>{{app.name}}-{{app.type}}-{{app-binder.name}}</artifactId>
 	<version>{{app.version}}</version>
 	<name>{{app.name}}-{{app.type}}-{{app-binder.name}}</name>
