--- a/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/apps-modules-pom.xml
+++ b/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/apps-modules-pom.xml
@@ -3,7 +3,7 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.springframework.cloud.stream.app</groupId>
+	<groupId>{{app.groupId}}</groupId>
 	<artifactId>{{app.name}}-{{app.type}}-apps</artifactId>
 	<version>{{app.version}}</version>
 	<packaging>pom</packaging>
