Enable custom Spring Boot Maven plugin config
Allow user applications to provide custom Spring Boot Maven
plugin configuration. The app generator plugin takes these
custom configuration elements, which are provided as CDATA,
and then add it to the Spring Boot Maven plugin configuration
when it generates app's Maven configuration (pom.xml).

Adding tests and docs.

--- a/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app-pom.xml
+++ b/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app-pom.xml
@@ -134,6 +134,11 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				{{#app.bootPluginConfiguration}}
+				<configuration>
+					{{this}}
+				</configuration>
+				{{/app.bootPluginConfiguration}}
 			</plugin>
 
 			<plugin>
