Remove 'latest' tag from jib docker image

--- a/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app-pom.xml
+++ b/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app-pom.xml
@@ -150,10 +150,7 @@
 						<image>{{app.containerImage.baseImage}}</image>
 					</from>
 					<to>
-						<image>{{app.containerImage.orgName}}/${project.artifactId}</image>
-						<tags>
-							<tag>{{app.containerImage.tag}}</tag>
-						</tags>
+						<image>{{app.containerImage.orgName}}/${project.artifactId}:${{app.containerImage.tag}}</image>
 					</to>
 					<container>
 						<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
