--- a/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app-pom.xml
+++ b/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app-pom.xml
@@ -109,7 +109,7 @@
 			</snapshots>
 			<id>spring-snapshots</id>
 			<name>Spring Snapshots</name>
-			<url>https://repo.spring.io/plugins-snapshot</url>
+			<url>https://repo.spring.io/snapshot</url>
 		</pluginRepository>
 		<pluginRepository>
 			<snapshots>
@@ -117,7 +117,7 @@
 			</snapshots>
 			<id>spring-milestones</id>
 			<name>Spring Milestones</name>
-			<url>https://repo.spring.io/plugins-milestone</url>
+			<url>https://repo.spring.io/milestone</url>
 		</pluginRepository>
 	</pluginRepositories>
 	<build>
