[Apps Plugin] Add build props to apps pom.xml template

--- a/spring-cloud-dataflow-apps-plugin/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app-pom.xml
+++ b/spring-cloud-dataflow-apps-plugin/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app-pom.xml
@@ -41,6 +41,9 @@
 		{{this}}
 		{{/app-binder.maven.properties}}
 		<!-- (end) maven properties -->
+		<buildName>${env.BUILD_NAME}</buildName>
+		<buildNumber>${env.BUILD_NUMBER}</buildNumber>
+		<revision>${env.BUILD_REVISION}</revision>
 	</properties>
 
 	<dependencyManagement>
