[Apps Plugin] Polish "Remove JIB plugin"
Removes mention of JIB plugin in remaining places.

--- a/spring-cloud-dataflow-apps-plugin/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app-pom.xml
+++ b/spring-cloud-dataflow-apps-plugin/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app-pom.xml
@@ -153,8 +153,7 @@
 
 			{{#app.containerImage.enableMetadata}}
 			<!--
-			 Use of properties-maven-plugin to load the encoded metadata properties created by the jib-maven-plugin
-			 Use: Use: ./mvnw clean install jib:dockerBuild or ./mvnw clean install jib:build
+			 Use of properties-maven-plugin to load the encoded metadata properties
 			-->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
